Добавлен удит пакетов Linux

--- a/cve_project/Dockerfile
+++ b/cve_project/Dockerfile
@@ -1,23 +1,10 @@
-FROM python:alpine
-
-ENV PYTHONUNBUFFERED=1
-ENV PYTHONDONTWRITEBYTECODE=1
-
-# Устанавливаем обновления и необходимые модули
-RUN apk update && apk add libpq
-RUN apk add --virtual .build-deps gcc python3-dev musl-dev postgresql-dev
-
-# Обновление pip python
-RUN pip install --upgrade pip
+FROM python:3.11.11-bookworm
 
 # Установка пакетов для проекта
 COPY requirements.txt ./requirements.txt
-RUN pip install -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
 WORKDIR /app
-
-# Удаляем зависимости билда
-RUN apk del .build-deps
 
 # Копирование проекта
 COPY . .
